[tool.poetry]
name = "gracy"
version = "1.30.0"
description = "Gracefully manage your API interactions"
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = "MIT"
keywords = ["api", "throttling", "http", "https", "async", "retry"]
readme = "README.md"
homepage = "https://github.com/guilatrova/gracy"
repository = "https://github.com/guilatrova/gracy"
include = [
    "LICENSE",
    "py.typed",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
]
packages = [
    { include = "gracy", from = "src" },
]

[tool.poetry.urls]
"Changelog" = "https://github.com/guilatrova/gracy/blob/main/CHANGELOG.md"


[tool.semantic_release]
version_variable = [
    "src/gracy/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
httpx = ">=0.23.0"
rich = { version = "*", optional = true }
pymongo = { version ="*", optional = true }
typing-extensions = { version = "^4.5.0", python = "<3.10" }


[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.0"
mypy = "^1.2.0"
black = "^23.1a1"
flake8 = "^6.0.0"
isort = "^5.12.0"
tryceratops = "^2.0.0"
pre-commit = "^3.0.1"
rich = "^13.2.0"
pymongo = "^4.3.3"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[tool.poetry.extras]
rich = ["rich"]
pymongo = ["pymongo"]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120
extra_standard_library = ["pytest"]
add_imports = "from __future__ import annotations"

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
pretty = true
exclude = [
    "tests"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "src/tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
