[tool.poetry]
name = "gracy"
version = "1.34.0"
description = "Gracefully manage your API interactions"
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = "MIT"
keywords = ["api", "throttling", "http", "https", "async", "retry"]
readme = "README.md"
homepage = "https://github.com/guilatrova/gracy"
repository = "https://github.com/guilatrova/gracy"
include = ["LICENSE", "py.typed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
]
packages = [{ include = "gracy", from = "src" }]

[tool.poetry.urls]
"Changelog" = "https://github.com/guilatrova/gracy/blob/main/CHANGELOG.md"


[tool.semantic_release]
version_variable = ["src/gracy/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
httpx = ">=0.23.0"
rich = { version = "*", optional = true }
pymongo = { version = "*", optional = true }
typing-extensions = "^4.9.0"
# It should be python = "<3.10" if we didn't use the 'deprecated' import from PEP 702

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.0"
pre-commit = "^3.5.0"
rich = "^13.2.0"
pymongo = "^4.3.3"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
ruff = "^0.1.6"
pyright = "^1.1.351"

[tool.poetry.extras]
rich = ["rich"]
pymongo = ["pymongo"]
plotly = ["plotly", "pandas"]

[tool.ruff.lint.isort]
extra-standard-library = ["pytest", "httpx"]
required-imports = ["from __future__ import annotations"]

# https://microsoft.github.io/pyright/#/configuration
[tool.pyright]
include = ["src"]
pythonVersion = "3.8"
pythonPlatform = "All"
reportMissingImports = "warning"
reportIncompatibleVariableOverride = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "src/tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
